# nabaos

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SHA256SUMS  docker-compose.yml
.github/workflows/: ci.yml  docs.yml  release.yml
catalog/academic-reviewer/: constitution.yaml  manifest.yaml
catalog/api-documenter/: constitution.yaml  manifest.yaml
catalog/backup-manager/: constitution.yaml  manifest.yaml
catalog/bill-reminder/: constitution.yaml  manifest.yaml
catalog/bio-writer/: constitution.yaml  manifest.yaml
catalog/blog-writer/: constitution.yaml  manifest.yaml
catalog/book-summarizer/: constitution.yaml  manifest.yaml
catalog/budget-tracker/: constitution.yaml  manifest.yaml
catalog/bulk-unsubscribe/: constitution.yaml  manifest.yaml
catalog/changelog-writer/: constitution.yaml  manifest.yaml
catalog/ci-monitor/: constitution.yaml  manifest.yaml
catalog/codebase-qa/: constitution.yaml  manifest.yaml
catalog/commission-calculator/: constitution.yaml  manifest.yaml
catalog/competitive-intel/: constitution.yaml  manifest.yaml
catalog/competitor-alert/: constitution.yaml  manifest.yaml
catalog/compliance-checker/: constitution.yaml  manifest.yaml
catalog/concept-explainer/: constitution.yaml  manifest.yaml
catalog/contact-enricher/: constitution.yaml  manifest.yaml
catalog/content-calendar/: constitution.yaml  manifest.yaml
catalog/content-repurposer/: constitution.yaml  manifest.yaml
catalog/contract-reviewer/: constitution.yaml  manifest.yaml
catalog/copywriter/: constitution.yaml  manifest.yaml
catalog/crypto-tracker/: constitution.yaml  manifest.yaml
catalog/daily-journal/: constitution.yaml  manifest.yaml
catalog/data-collector/: constitution.yaml  manifest.yaml
catalog/deal-finder/: constitution.yaml  manifest.yaml
catalog/dependency-scanner/: constitution.yaml  manifest.yaml
catalog/deploy-assistant/: constitution.yaml  manifest.yaml
catalog/doc-generator/: constitution.yaml  manifest.yaml
catalog/earnings-digest/: constitution.yaml  manifest.yaml
catalog/email-campaign/: constitution.yaml  manifest.yaml
catalog/email-digest/: constitution.yaml  manifest.yaml
catalog/email-drafts/: constitution.yaml  manifest.yaml
catalog/email-scheduler/: constitution.yaml  manifest.yaml
catalog/email-sender/: constitution.yaml  manifest.yaml
catalog/energy-monitor/: constitution.yaml  manifest.yaml
catalog/engagement-analyzer/: constitution.yaml  manifest.yaml
catalog/error-monitor/: constitution.yaml  manifest.yaml
catalog/escalation-router/: constitution.yaml  manifest.yaml
catalog/expense-logger/: constitution.yaml  manifest.yaml
catalog/fact-checker/: constitution.yaml  manifest.yaml
catalog/file-organizer/: constitution.yaml  manifest.yaml
catalog/financial-reporter/: constitution.yaml  manifest.yaml
catalog/flashcard-maker/: constitution.yaml  manifest.yaml
catalog/flight-tracker/: constitution.yaml  manifest.yaml
catalog/focus-timer/: constitution.yaml  manifest.yaml
catalog/follow-up-tracker/: constitution.yaml  manifest.yaml
catalog/gdpr-auditor/: constitution.yaml  manifest.yaml
catalog/grocery-planner/: constitution.yaml  manifest.yaml
catalog/habit-tracker/: constitution.yaml  manifest.yaml
catalog/hashtag-researcher/: constitution.yaml  manifest.yaml
catalog/home-dashboard/: constitution.yaml  manifest.yaml
catalog/hotel-finder/: constitution.yaml  manifest.yaml
classifier-service/: app.py  requirements.txt  run.sh
deploy/: nabaos.service
docs/: feature-parity-study.md
examples/: browser-automation.yaml  data-tools.yaml  document-generation.yaml  subprocess-abilities.yaml  weather-agent.json
nabaos-web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: backup.sh  download-models.sh  export-nabaos.sh  install.sh  nabaos-readme.md  restore.sh
src/: config_migration.rs  lib.rs  main.rs
tests/: integration_test.rs  security_adversarial_test.rs  user_experience_test.rs
(+711 files in other folders)
